adding the state where we're having lost our temp,liked,currentUser and made some of them static. blah . but still works

--- a/templates/like-page.html
+++ b/templates/like-page.html
@@ -44,6 +44,8 @@
                     <!--/col-->
                 </div>
             </form>
+            <a class="btn btn-outline-danger btn-block" href="/login">Logout</a>
+            <a class="btn btn-outline-primary btn-block" href="/liked">Liked</a>
             <!--/row-->
         </div>
         <!--/card-block-->
