--- a/templates/like-page.html
+++ b/templates/like-page.html
@@ -50,7 +50,7 @@
     </div>
 
 </div>
-<a class="btn btn-outline-danger btn-block" href="/login">Logout</a>
+<a class="btn btn-outline-danger btn-block" href="/logout">Logout</a>
 <a class="btn btn-outline-primary btn-block" href="/liked">Liked</a>
 </body>
 </html>
