One at a time is totally works

--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -18,15 +18,15 @@
 </head>
 
 <body class="text-center">
-    <form class="form-signin" method="post">
+    <form class="form-signing" method="post">
         <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Please sign Up</h1>
         <label for="inputName" class="sr-only">Name</label>
         <input type="text" id="inputName" name="name" class="form-control" placeholder="Name" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
         <label for="inputImageURL" class="sr-only">imageURL</label>
-        <input type="text" name="imageURL" id="inputImageURL" class="form-control" placeholder="imageURL" required>
+        <input type="text" name="imageurl" id="inputImageURL" class="form-control" placeholder="imageurl" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
         <p class="mt-5 mb-3 text-muted">&copy; Tinder 2018</p>
     </form>
